--- a/packages/api-fetch/package.json
+++ b/packages/api-fetch/package.json
@@ -24,15 +24,7 @@
 	},
 	"main": "build/index.js",
 	"module": "build-module/index.js",
-	"exports": {
-		"import": {
-			".": "build-module/index.js",
-			"./wp-module": "build-module/wp-module.js"
-		},
-		"require": {
-			".": "build/index.js"
-		}
-	},
+	"wp-module": "build-module/wp-module.js",
 	"react-native": "src/index",
 	"types": "build-types",
 	"dependencies": {
